RESOLVED FIXED287020
[GTK][WPE] Fix build when DAMAGE_TRACKING is disabled
https://bugs.webkit.org/show_bug.cgi?id=287020
Summary [GTK][WPE] Fix build when DAMAGE_TRACKING is disabled
Simon Pena
Reported 2025-02-04 08:19:34 PST
.
Attachments
Simon Pena
Comment 1 2025-02-04 08:22:48 PST
EWS
Comment 2 2025-02-05 08:11:11 PST
Committed 289867@main (ba06d144e31c): <https://commits.webkit.org/289867@main> Reviewed commits have been landed. Closing PR #39987 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.