[GTK][WPE] Fix build when DAMAGE_TRACKING is disabled https://bugs.webkit.org/show_bug.cgi?id=287020

Reviewed by Adrian Perez de Castro.

Protect Damage-specific features when DAMAGE_TRACKING is disabled

* Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.cpp:
(WebKit::AcceleratedSurfaceDMABuf::didRenderFrame):
* Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.h:

Canonical link: https://commits.webkit.org/289867@main